# csv2qif

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  csv2qif.py  pyproject.toml  requirements.txt
.github/workflows/: rust.yml  test.yml
finance_utils/: __init__.py  common.py  csv_format.py  file_utils.py
finance_utils/accounts/: base.py
src/: lib.rs  main.rs
tests/: __init__.py  helper.py  helper.rs  mod.rs
tests/public/: __init__.py  banks_test.py  banks_test.rs  config.json  helper.rs  mappings_test.py  mod.rs
tests/public/data/: bank_a_2016.csv  bank_b_2019.csv
