[package]
name = "csv2qif"
version = "0.1.0"
edition = "2021"
description = "Convert CSV file to QIF file."
readme = "README.md"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.1"
csv = "1.3.0"
clap = { version = "4.5.18", features = ["derive"] }
log = "0.4.22"
rayon = "1.10.0"
lazy_static = "1.5.0"

[dev-dependencies]
test-log = "*"
